--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.0.1",
+    "cssnano": "^7.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
